# pylibjxl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  GEMINI.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
patches/: libjpeg-turbo.patch
src/: main.cpp
src/pylibjxl/: __init__.py  __init__.pyi
tests/: conftest.py  test_api_coverage.py  test_basic.py  test_benchmark.py  test_context.py  test_file_io.py  test_image.py  test_jpeg.py  test_jpeg_file_io.py  test_metadata.py  test_perf.py  test_pillow_interop.py  test_transcode.py  verify_memory.py
