[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pylibjxl"
version = "0.1.1"
description = "Python bindings for libjxl using pybind11"
readme = "README.md"
authors = [
    { name = "curry tang", email = "twn39@163.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.scikit-build]
cmake.version = ">=3.15"
ninja.version = ">=1.10"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/pylibjxl"]
install.components = ["runtime"]

[tool.scikit-build.sdist]
exclude = [
    "third_party/libjxl/testdata",
    "third_party/libjxl/doc",
    "third_party/libjxl/examples",
    "third_party/libjxl/third_party/googletest",
    "third_party/libjxl/third_party/benchmark",
    "third_party/libjpeg-turbo/testimages",
    "third_party/libjpeg-turbo/doc",
    "images",
    ".idea",
    ".pytest_cache",
    ".benchmarks"
]

[dependency-groups]
dev = [
    "clang-tidy>=21.1.6",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
]

[tool.coverage.run]
omit = ["tests/*"]
