[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pylibjxl"
version = "0.3.3"
description = "Fast Python bindings for libjxl and libjpeg-turbo with GIL-free encoding/decoding and native async support."
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "curry tang", email = "twn39@163.com" }
]
requires-python = ">=3.11, <3.15"
keywords = ["jpeg-xl", "jxl", "jpeg", "libjxl", "libjpeg-turbo", "pybind11", "numpy", "asyncio", "image-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/user/pylibjxl"
Repository = "https://github.com/user/pylibjxl.git"
Issues = "https://github.com/user/pylibjxl/issues"
Documentation = "https://github.com/user/pylibjxl#readme"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.scikit-build]
cmake.version = ">=3.15"
ninja.version = ">=1.10"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/pylibjxl"]
install.components = ["runtime"]

[tool.scikit-build.sdist]
exclude = [
    "third_party/libjxl/testdata",
    "third_party/libjxl/doc",
    "third_party/libjxl/examples",
    "third_party/libjxl/third_party/googletest",
    "third_party/libjxl/third_party/benchmark",
    "third_party/libjpeg-turbo/testimages",
    "third_party/libjpeg-turbo/doc",
    "images",
    ".idea",
    ".pytest_cache",
    ".benchmarks"
]

[dependency-groups]
dev = [
    "clang-tidy>=21.1.6",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0",
    "Pillow>=10.0.0",
    "pillow-jxl-plugin>=1.3.7",
    "pyright>=1.1.393",
    "ty>=0.0.17",
]

[tool.ruff]
exclude = ["third_party"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pyright]
exclude = ["third_party"]
include = ["src", "tests"]
reportMissingImports = true
typeCheckingMode = "basic"

[tool.ty.src]
exclude = ["third_party"]

[tool.coverage.run]
omit = ["tests/*"]
